<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_choose_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChooseViewActivity">

    <TextView
        android:id="@+id/title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/chooseview_title"
        android:textAppearance="@style/TextAppearance.MyApp.Subtitle1"
        app:layout_constraintBottom_toTopOf="@+id/image_main_compass_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="224dp"
        android:layout_height="60dp"
        android:text="@string/chooseview_btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_main_compass_1" />

    <Button
        android:id="@+id/button_compass_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseview_btn_compass_info"
        android:textAppearance="@style/TextAppearance.MyApp.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start_quiz"
        app:layout_constraintVertical_bias="0.90" />

    <ImageView
        android:id="@+id/image_main_compass_1"
        android:layout_width="364dp"
        android:layout_height="364dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:srcCompat="@drawable/img_compass" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_1"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="2dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_main_compass_1">

        <ImageView
            android:id="@+id/image_for_canvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frame_2"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="22dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_main_compass_1">

        <!--            app:srcCompat="@drawable/img_compass_1_autho_left2"-->


        <ImageView
            android:id="@+id/image_soc_hover"
            android:layout_width="20dp"
            android:layout_height="160dp"
            android:layout_marginTop="80dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_5_soc" />

        <ImageView
            android:id="@+id/image_autho_left_hover"
            android:layout_width="81dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_1_autho_left" />

        <ImageView
            android:id="@+id/image_nation_hover"
            android:layout_width="160dp"
            android:layout_height="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="0dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_2_nation" />

        <ImageView
            android:id="@+id/image_gov_hover"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_3_gov" />

        <ImageView
            android:id="@+id/image_soc_demo_hover"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_4_soc_demo" />

        <ImageView
            android:id="@+id/image_autho_right_hover"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="0dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_6_autho_right" />

        <ImageView
            android:id="@+id/image_radical_cap_hover"
            android:layout_width="20dp"
            android:layout_height="160dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="80dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_7_radical_cap" />

        <ImageView
            android:id="@+id/image_right_anar_hover"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="240dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_10_right_anar" />

        <ImageView
            android:id="@+id/image_anar_hover"
            android:layout_width="160dp"
            android:layout_height="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="300dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_11_anar" />

        <ImageView
            android:id="@+id/image_left_anar_hover"
            android:layout_width="81dp"
            android:layout_height="80dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="240dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_14_left_anarh" />

        <ImageView
            android:id="@+id/image_cons_hover"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_8_cons" />

        <ImageView
            android:id="@+id/image_prog_hover"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="80dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_9_prog" />

        <ImageView
            android:id="@+id/image_lib_hover"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="160dp"
            android:alpha="0"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_12_lib" />

        <ImageView
            android:id="@+id/image_lib_soc"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="240dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_15_lib_soc" />

        <ImageView
            android:id="@+id/image_libertar_hover"
            android:layout_width="141dp"
            android:layout_height="60dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="240dp"
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_13_libertar" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>