<resources>
    <string name="app_name" translatable="false">Political Square</string>

    <string name="navigation_drawer_open" translatable="false">Open menu</string>
    <string name="navigation_drawer_close" translatable="false">Close menu</string>

    <string name="intro_title_1">Who you think you are on Political Compass?</string>
    <string name="intro_title_2">Pass Quiz</string>
    <string name="intro_title_3">Who you really are</string>
    <string name="intro_button_next">Next</string>
...
    <string name="settings_radio_eng" translatable="false">English</string>

    <string name="settings_title_change_quiz">Quiz option</string>

    <string name="navheader_title">Menu</string>
    <string name="all_dialog_do_you_want_to_end">End the quiz?</string>
    <string name="all_dialog_yes">Yes</string>
    <string name="all_dialog_no">No</string>

    <string name="all_title_quiz_option_1">For World</string>
    <string name="all_title_quiz_option_2">For Ukraine</string>
    <string name="all_owner_quiz_option_1">for World</string>
    <string name="all_owner_quiz_option_2">for Ukraine</string>
...
