<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_main"
        android:icon="@drawable/ic_home"
        android:title="@string/navmenu_main" />

    <item
        android:id="@+id/nav_saved"
        android:icon="@drawable/ic_saved"
        android:title="@string/navmenu_saved" />

    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/ic_info"
        android:title="@string/navmenu_info" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/navmenu_settings" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/navmenu_about"/>
</menu>